# warbler

./: .gitignore  .nojekyll  README.md  build.py  hello.py  index.html  pyproject.toml  search.json
.github/workflows/: docs.yml  release.yml
docs/: _quarto.yml  index.qmd
warble/: blender_manifest.py  blender_manifest.toml  init.py  ops.py
warbler/: __init__.py  blender_manifest.toml  geometryset.py  init.py  manager.py  ops.py  panel.py  props.py  rigid.py  simulation.py  utils.py  warbler.py
