[project]
name = "warbler"
version = "0.0.7"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "newton>=0.1.3",
    "databpy>=0.6.0",
    "numpy>=1.26,<2.0",
]

[project.optional-dependencies]
bpy =  ["bpy>=4.4"]
dev = ["pytest", "pytest-cov", "syrupy", "scipy", "fake-bpy-module"]
test = ["pytest", "pytest-cov", "syrupy", "scipy"]
docs = ["quartodoc", "tomlkit"]
