[project]
name = "warbler"
version = "0.0.10"
description = "Interactive GPU simulations in Blender's viewport"
authors = [
    {name = "Brady Johnston", email = "brady.johnston@me.com"},
]
readme = "README.md"
requires-python = "~=3.11.0"
dependencies = [
    "newton>=0.1.3",
    "databpy>=0.6.0",
]

[project.optional-dependencies]
bpy =  ["bpy>=4.5"]
dev = [
    "bpy>=4.5",
    "pytest",
    "pytest-cov",
    "syrupy",
    "scipy",
    "fake-bpy-module",
    "ty>=0.0.2",
]
docs = ["quartodoc", "quarto-cli", "tomlkit"]
