[project]
name = "warbler"
version = "0.1.0"
description = "Interactive GPU simulations in Blender's viewport"
authors = [
    {name = "Brady Johnston", email = "brady.johnston@me.com"},
]
readme = "README.md"
requires-python = "~=3.13.0"
dependencies = [
    "newton>=1.1.0",
    "databpy>=0.7.0",
]

[project.optional-dependencies]
bpy =  ["bpy>=5.1.1"]
dev = [
    "bpy>=5.1.1",
    "pytest",
    "pytest-cov",
    "syrupy",
    "scipy",
    "fake-bpy-module",
    "ruff",
    "ty>=0.0.34",
    "urllib3>=2.6.3"
]
docs = ["quartodoc", "quarto-cli>=1.9", "tomlkit"]
